fix align

--- a/src/pages/desk/desk.scss
+++ b/src/pages/desk/desk.scss
@@ -157,7 +157,7 @@
 		.lobby-lang-checker{
 			display: flex;
 			flex-direction: column;
-			align-items: center;
+			align-content: center;
 		}
 	}
 
